--- a/gta5.vcxproj.filters
+++ b/gta5.vcxproj.filters
@@ -25,12 +25,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SDK\sdk.h">
-      <Filter>SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="SDK\log.h">
-      <Filter>SDK</Filter>
-    </ClInclude>
     <ClInclude Include="scripthook\enums.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -50,6 +44,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="gtastate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\SDK\log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\SDK\sdk.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
