--- a/gta5.vcxproj
+++ b/gta5.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <RootNamespace>gat5</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ProjectGuid>{948C9A51-CD50-4502-BC97-1E35ED83DDFD}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -171,6 +171,11 @@
   <ItemGroup>
     <ClInclude Include="..\..\SDK\log.h" />
     <ClInclude Include="..\..\SDK\sdk.h" />
+    <ClInclude Include="..\gamehook\SDK\json.h" />
+    <ClInclude Include="..\gamehook\SDK\log.h" />
+    <ClInclude Include="..\gamehook\SDK\sdk.h" />
+    <ClInclude Include="..\gamehook\SDK\shader.h" />
+    <ClInclude Include="..\gamehook\SDK\types.h" />
     <ClInclude Include="gtastate.h" />
     <ClInclude Include="scripthook\enums.h" />
     <ClInclude Include="scripthook\main.h" />
